<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="all">        
        <item
            android:id="@+id/notifications"
            android:checked="true"
            android:icon="@drawable/ic_notification"
            android:title="@string/notifications" />

        <item
            android:id="@+id/awards"
            android:icon="@drawable/ic_awards"
            android:title="@string/awards" />

        <item
            android:id="@+id/help"
            android:icon="@drawable/ic_help"
            android:title="@string/help" />

        <item
            android:id="@+id/mentor"
            android:icon="@drawable/ic_favorite"
            android:title="@string/mentor" />
    </group>
</menu>