<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Activity.LoginActivity">

    <android.support.design.widget.TextInputLayout style="@style/TextInputLayout">

        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout style="@style/TextInputLayout">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login" />

    <TextView
        android:id="@+id/forgot_passowrd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/abc_button_padding_horizontal_material"
        android:text="@string/forgot_password" />


</LinearLayout>
